# Auto-GPT-MetaTrader-Plugin

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
src/auto_gpt_metatrader/: __init__.py  candlesticks.py  commands.txt  fcs.py  forex.py  indicators.py  lunarcrush.py  myfxbook.py  trading.py
